workspace-sf/force-app/main/default/objects/ParametroVigencia__c/ParametroVigencia__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar os parâmetros de vigência de um produto</description>
    <label>Parâmetro de vigência</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parâmetros de vigência</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>