workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/IndiceReajuste__c.field-meta.xml
<CustomField>
    <fullName>IndiceReajuste__c</fullName>
    <label>Índice de reajuste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IGP-M</fullName>
            </value>
            <value>
                <fullName>IPCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>