workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ModeloResgate__c.field-meta.xml
<CustomField>
    <fullName>ModeloResgate__c</fullName>
    <label>Modelo de resgate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentual do capital</fullName>
            </value>
            <value>
                <fullName>Valor de prêmio pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>