workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ParametroVigencia__c.field-meta.xml
<CustomField>
    <fullName>ParametroVigencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parâmetro de vigência</label>
    <referenceTo>ParametroVigencia__c</referenceTo>
    <relationshipLabel>Parâmetros de vigência</relationshipLabel>
    <relationshipName>ParametrosVigencia</relationshipName>
    <type>Lookup</type>
</CustomField>