workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ParcelamentoAposFinalVigencia__c.field-meta.xml
<CustomField>
    <fullName>ParcelamentoAposFinalVigencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcelamento após Final da Vigência</label>
    <type>Checkbox</type>
</CustomField>