workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/Periodicidade__c.field-meta.xml
<CustomField>
    <fullName>Periodicidade__c</fullName>
    <label>Periodicidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dias</fullName>
            </value>
            <value>
                <fullName>Anos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>