workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PeriodoCoberturaMaximo__c.field-meta.xml
<CustomField>
    <fullName>PeriodoCoberturaMaximo__c</fullName>
    <label>Período de cobertura máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>