workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PeriodoCoberturaMinimo__c.field-meta.xml
<CustomField>
    <fullName>PeriodoCoberturaMinimo__c</fullName>
    <label>Período de cobertura mínimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>