workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PeriodoMaximoInadimplencia__c.field-meta.xml
<CustomField>
    <fullName>PeriodoMaximoInadimplencia__c</fullName>
    <description>Campo para verificar em dias o Período máximo de inadimplência. Localizado na section &quot;Informações de periódico&quot;</description>
    <inlineHelpText>Em dias</inlineHelpText>
    <label>Período máximo de inadimplência</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>