workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PeriodoMaximoVigencia__c.field-meta.xml
<CustomField>
    <fullName>PeriodoMaximoVigencia__c</fullName>
    <label>Período máximo de vigência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>