workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PeriodoMinimoVigencia__c.field-meta.xml
<CustomField>
    <fullName>PeriodoMinimoVigencia__c</fullName>
    <label>Período mínimo de vigência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>