workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PrazoAplicacaoReajuste__c.field-meta.xml
<CustomField>
    <fullName>PrazoAplicacaoReajuste__c</fullName>
    <inlineHelpText>Em anos</inlineHelpText>
    <label>Prazo para aplicação de reajuste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>