workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PrazoDesistenciaRenovacao__c.field-meta.xml
<CustomField>
    <fullName>PrazoDesistenciaRenovacao__c</fullName>
    <inlineHelpText>Em dias</inlineHelpText>
    <label>Prazo para desistência da renovação</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>