workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/PrazoRetornoAviso__c.field-meta.xml
<CustomField>
    <fullName>PrazoRetornoAviso__c</fullName>
    <label>Prazo para retorno do aviso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>