workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ProdutoRenovavel__c.field-meta.xml
<CustomField>
    <fullName>ProdutoRenovavel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produto renovável?</label>
    <type>Checkbox</type>
</CustomField>