workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/QuantidadeRenovacaoesAnuencia__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeRenovacaoesAnuencia__c</fullName>
    <label>Quantidade de renovações sem anuência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>