workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/RenovaEsgotamentoIndenizacao__c.field-meta.xml
<CustomField>
    <fullName>RenovaEsgotamentoIndenizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renova com esgotamento de indenização?</label>
    <type>Checkbox</type>
</CustomField>