workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/TipoPeriodo__c.field-meta.xml
<CustomField>
    <fullName>TipoPeriodo__c</fullName>
    <label>Tipo de período</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anos</fullName>
            </value>
            <value>
                <fullName>Dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>