workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/TipoReenquadramento__c.field-meta.xml
<CustomField>
    <fullName>TipoReenquadramento__c</fullName>
    <label>Tipo de Reenquadramento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Trianual</fullName>
            </value>
            <value>
                <fullName>Faixa Etária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>