workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ValidadeOrcamento__c.field-meta.xml
<CustomField>
    <fullName>ValidadeOrcamento__c</fullName>
    <inlineHelpText>Leve em consideração o dia atual + a quantidade de dias informada nesse campo</inlineHelpText>
    <label>Validade do Orçamento</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>