workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/ValidadeProposta__c.field-meta.xml
<CustomField>
    <fullName>ValidadeProposta__c</fullName>
    <inlineHelpText>Em dias</inlineHelpText>
    <label>Validade da Proposta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>