workspace-sf/force-app/main/default/objects/ParametroVigencia__c/fields/VigenciaMinimaRenovacao__c.field-meta.xml
<CustomField>
    <fullName>VigenciaMinimaRenovacao__c</fullName>
    <description>RVI-80 - Mudança da Label de &quot;Vigência mínima para renovação&quot; para &quot;Início de Renovação (Dias)&quot; - API name nao foi modificado. -- Uile</description>
    <inlineHelpText>Prazo antes do final da vigência, em quantidade de dias, para início do processo de renovação</inlineHelpText>
    <label>Início de Renovação (Dias)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>