workspace-sf/force-app/main/default/objects/ParametroVigencia__c/recordTypes/ProdutoTecnico.recordType-meta.xml
<RecordType>
    <fullName>ProdutoTecnico</fullName>
    <active>true</active>
    <label>Produto técnico</label>
</RecordType>