workspace-sf/force-app/main/default/objects/ParametroVigencia__c/validationRules/AlteracaoProdutoRenovavel.validationRule-meta.xml
<ValidationRule>
    <fullName>AlteracaoProdutoRenovavel</fullName>
    <active>true</active>
    <description>Permitir a alteração apenas para os perfis de Administrador</description>
    <errorConditionFormula>ISCHANGED(ProdutoRenovavel__c ) &amp;&amp;
	$Profile.Name  &lt;&gt; &quot;Administrador do Sistema&quot; &amp;&amp;
	$Profile.Name &lt;&gt; &quot;Administrador Porto&quot;</errorConditionFormula>
    <errorDisplayField>ProdutoRenovavel__c</errorDisplayField>
    <errorMessage>Alteração não permitida, fale com o Administrador para analisar impacto nos contratos a serem renovados. 


Atividade</errorMessage>
</ValidationRule>