workspace-sf/force-app/main/default/objects/ParametroVigencia__c/validationRules/ValidarPeriodoMaximoEMinimoVigencia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPeriodoMaximoEMinimoVigencia</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    NOT(ISNULL(PeriodoMaximoVigencia__c)) || NOT(ISNULL(PeriodoMinimoVigencia__c)),
    PeriodoMaximoVigencia__c &lt; PeriodoMinimoVigencia__c,
    false
)</errorConditionFormula>
    <errorMessage>O período máximo de vigência deve ser maior que o período mínimo de vigência</errorMessage>
</ValidationRule>