workspace-sf/force-app/main/default/objects/ParametroVigencia__c/validationRules/ValidarPreenchimentoDeterminado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoDeterminado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Tipo__c, &apos;Determinado&apos;),
    OR(
       NOT(ISBLANK(PrazoAvisarRenovacao__c)),
       NOT(ISBLANK(VigenciaMinimaRenovacao__c)),
       NOT(ISBLANK(PrazoRetornoAviso__c)),
       NOT(ISBLANK(PrazoDesistenciaRenovacao__c)),
       NOT(ISBLANK(IdadeMaximaRenovacao__c)),
       NOT(ISBLANK(QuantidadeRenovacaoesAnuencia__c)),
       RenovaEsgotamentoIndenizacao__c = true,
       NOT(ISBLANK(PeriodoMaximoInadimplenciaPeriodica__c)),
       NOT(ISPICKVAL(ModeloResgate__c,&apos;&apos;)),
       NOT(ISPICKVAL(PrazoMinimoCancelamento__c,&apos;&apos;))
    )
)</errorConditionFormula>
    <errorMessage>Preenchimento inválido para o Tipo selecionado</errorMessage>
</ValidationRule>