workspace-sf/force-app/main/default/objects/ParametroVigencia__c/validationRules/ValidarPreenchimentoPeriodico.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoPeriodico</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Tipo__c, &apos;Periódico&apos;),
    OR(
       NOT(ISPICKVAL(ModeloResgate__c,&apos;&apos;)),
       NOT(ISPICKVAL(PrazoMinimoCancelamento__c,&apos;&apos;)),
       NOT(ISBLANK(PeriodoMinimoVigencia__c)),
       NOT(ISBLANK(PeriodoMaximoVigencia__c))
    )
)</errorConditionFormula>
    <errorMessage>Preenchimento inválido para o Tipo selecionado</errorMessage>
</ValidationRule>