workspace-sf/force-app/main/default/objects/ParametroVigencia__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Produto__c</columns>
    <columns>Tipo__c</columns>
    <columns>ValidadeOrcamento__c</columns>
    <columns>ValidadeProposta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>